@@ -1,3 +1,7 @@
+2009-11-20  Dustin J. Mitchell <dustin@zmanda.com>
+	* common-src/stream.c common-src/util.c: use g_debug instead
+	  of dbprintf
+
 2009-11-20  Jean-Louis Martineau <martineau@zmanda.com>
 	* Revert to previous gnulib, keep fseeko, ftello.
 
